<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dijingyu.app_demo.ui.main.LoginActivity">

    <com.example.dijingyu.app_demo.widget.EditedPhone
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/login_text"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_73"
        android:textColor="#fa6a13"
        android:lineSpacingExtra="@dimen/sp_0.72"
        android:height="@dimen/dp_22"
        android:textSize="@dimen/sp_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="@string/login_title"
        android:layout_marginStart="@dimen/dp_23"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_104"
        android:textColor="#373737"
        android:lineSpacingExtra="@dimen/sp_1.22"
        android:height="@dimen/dp_38"
        android:textSize="@dimen/sp_27"
        android:layout_width="@dimen/dp_198"
        android:layout_height="@dimen/dp_38"/>
    <TextView
        android:text="@string/login_or"
        android:layout_marginStart="@dimen/dp_180"
        android:layout_marginLeft="@dimen/dp_180"
        android:layout_marginTop="@dimen/dp_461"
        android:textColor="#A9A9A9"
        android:lineSpacingExtra="@dimen/sp_0.63"
        android:height="@dimen/dp_20"
        android:textSize="@dimen/sp_14"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_20"/>
    <LinearLayout
        android:id="@+id/weChatLoginLinear"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/dp_163"
        android:layout_marginStart="@dimen/dp_163"
        android:layout_marginTop="@dimen/dp_487"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/iv_weChat"
            android:src="@mipmap/wechat"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_marginTop="@dimen/dp_9"
            android:text="@string/login_weChat"
            android:lineSpacingExtra="@dimen/dp_0_5"
            android:height="@dimen/dp_17"
            android:textColor="#4DAE46"
            android:textSize="@dimen/sp_12"
            android:layout_width="@dimen/dp_51"
            android:layout_height="@dimen/dp_17" />
    </LinearLayout>

    <View
        android:background="@drawable/bg_or_left"
        android:layout_marginLeft="@dimen/dp_160"
        android:layout_marginTop="@dimen/dp_472"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_160" />
    <View
        android:background="@drawable/bg_or_right"
        android:layout_marginLeft="@dimen/dp_200"
        android:layout_marginTop="@dimen/dp_472"
        android:layout_width="@dimen/dp_15"
        android:layout_height="@dimen/dp_1"
        android:layout_marginStart="@dimen/dp_200" />
    <TextView
        android:id="@+id/login_tv_service"
        android:text="@string/login_service"
        android:layout_marginStart="@dimen/dp_83"
        android:layout_marginLeft="@dimen/dp_83"
        android:layout_marginTop="@dimen/dp_629"
        android:textColor="#999999"
        android:lineSpacingExtra="@dimen/dp_0"
        android:height="@dimen/dp_18"
        android:textColorHighlight="#00ffffff"
        android:textSize="@dimen/sp_13"
        android:layout_width="@dimen/dp_209"
        android:layout_height="@dimen/dp_18"/>
</RelativeLayout>
