<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <View
        android:id="@+id/view"
        android:background="#FFFA6A13"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="@dimen/dp_329"
        android:layout_height="@dimen/dp_1"/>
    <ImageView
        android:src="@mipmap/phone"
        android:layout_marginLeft="@dimen/dp_31"
        android:layout_marginStart="@dimen/dp_31"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_21" />
    <TextView
        android:text="@string/num_phone"
        android:textSize="@dimen/sp_14"
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_20"
        android:layout_marginLeft="@dimen/dp_53"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"
        android:layout_marginStart="@dimen/dp_53"
        android:id="@+id/textView5" />
    <Button
        android:id="@+id/bt_send"
        android:text="@string/login_bt"
        android:enabled="false"
        android:textColor="#fefefe"
        android:textSize="@dimen/sp_14"
        android:background="@drawable/bg_login_button"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_263"
        android:layout_marginStart="@dimen/dp_263"
        android:layout_above="@id/view"
        android:layout_marginBottom="@dimen/dp_9"/>

    <EditText
        android:id="@+id/ed_phone"
        style="?android:attr/textViewStyle"
        android:layout_width="@dimen/dp_118"
        android:layout_height="@dimen/dp_25"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_toRightOf="@+id/textView5"
        android:background="@null"
        android:hint="@string/login_ed_hint"
        android:inputType="phone"
        android:maxLength="11"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>